# Entropy_Quadtree

./: .gitattributes  .gitignore  Makefile  ReadMe.MD  complexity.py  main.py  quadtree.py  visualizer.py
results/classify/: compression.txt  compression_spatial_map.txt  merged_shannon_compression.txt  shannon.txt
results/classify/archive/: compression_channel_complexity.txt  shannon.txt  variance.txt
results/tuning/: best_thresholds.json  compression.csv  compression_spatial_map.csv  shannon.csv
src/: batch.py  classify.py  complexity.py  config.py  depth_distribution.py  features.py  grid_importance.py  main.py  merge_features.py  predict.py  pyproject.toml  quadtree.py  reproduce.py  requirements.txt  scatter.py  stream_batch.py  tune_plots.py  tune_thresholds.py  visualizer.py
src/results/: classify_compression_histogram.txt  classify_results_compression.txt  classify_results_shannon.txt  classify_results_variance.txt  classify_variance_histogram.txt  features.csv  tune_results_compression.csv  tune_results_shannon.csv  tune_results_variance.csv
src/results/tune_threshold/: tune_compression_histogram.csv  tune_results_compression.csv  tune_results_shannon.csv  tune_results_variance.csv  tune_variance_histogram.csv
