[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "quadtree-information-analysis"
version = "0.1.0"
description = "Quadtree Complexity Analysis for Image Forensics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

dependencies = [
    "Pillow>=10.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "requests>=2.31",
    "matplotlib>=3.7"
]

[project.optimal-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0"
]

[project.scripts]
# Install the package with 'pip install -e .' to use these entry points
qia-batch       = "src.batch:main"
qia-stream      = "src.stream_batch:main"
qia-classify    = "src.classify:main"
qia-predict     = "src.predict:main"
qia-tune        = "src.tune_thresholds:main"
qia-tune-plots  = "src.tune_plots:main"
qia-scatter     = "src.scatter:main"
qia-visualize   = "src.main:main"
qia-depth       = "src.depth_distribution:main"
qia-grid        = "src.grid_importance:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
